@@ -1129,6 +1129,8 @@ L<Mail::MIMEDefang::DKIM(3)>
 
 L<Mail::MIMEDefang::DKIM::ARC(3)>
 
+L<Mail::MIMEDefang::DKIM::Authres(3)>
+
 L<Mail::MIMEDefang::Mail(3)>
 
 L<Mail::MIMEDefang::MIME(3)>
